# SimpleRayTrace

./: CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
